Update website for Digraphs 1.8.0

--- a/doc/manual.css
+++ b/doc/manual.css
@@ -480,3 +480,13 @@ span.BibHowpublished {
 
 
 
+/* digraphs.css: Digraphs-specific styles appended to manual.css by DigraphsMa\
+keDoc */
+
+figure {
+    text-align: center;
+}
+
+figcaption {
+    margin: 1em 0;
+}
